force-app/main/default/objects/StudentCopyList__c/StudentCopyList__c.object-meta.xml
<CustomObject>
    <label>StudentCopyList</label>
    <nameField>
        <label>StudentCopyList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentCopyLists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>