force-app/main/default/objects/StudentCopyList__c/fields/S_C_L__c.field-meta.xml
<CustomField>
    <fullName>S_C_L__c</fullName>
    <label>S_C_L</label>
    <type>AutoNumber</type>
</CustomField>