force-app/main/default/objects/StudentCopyList__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <label>StudentID</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>StudentCopyLists</relationshipLabel>
    <relationshipName>StudentCopyLists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>